codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_all_scope_foreign_rwd.snap
---
source: tui/src/resume_picker.rs
expression: "comfortable_scope_row_snapshot(SessionFilterMode::All)"
---
❯ Continue cross-platform session
  15m ago       ⌁ C:\Users\alice\project-worktree           feature/project-scope
