codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_cwd_expanded_session_omits_rwd.snap
---
source: tui/src/resume_picker.rs
expression: "render_expanded_session_snapshot(SessionFilterMode::Cwd)"
---
⌄ Investigate picker expansion
  │ Session:    019dabc1-0ef5-7431-b81c-03037f51f62c
  │ Created:    1 hour ago · 2026-04-28 16:30:00
  │ Updated:    15 minutes ago · 2026-04-28 17:45:00
  │ Branch:      fcoury/session-picker
  │
  │ Conversation:
  │ Show me the recent transcript
  └ Here are the last few lines.
