codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_cwd_scope_omits_rwd.snap
---
source: tui/src/resume_picker.rs
expression: "comfortable_scope_row_snapshot(SessionFilterMode::Cwd)"
---
❯ Continue cross-platform session
  15m ago        feature/project-scope
