codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_search_line_sort_filter_tabs.snap
---
source: tui/src/resume_picker.rs
expression: terminal.backend().to_string()
---
Type to search   Filter: [Project] Cwd  All    Status: [Active] Archived    Sort: [Updated] Created
